--- a/src/pages/pincode/pincode.html
+++ b/src/pages/pincode/pincode.html
@@ -12,7 +12,7 @@
     <button ion-button color="light" round class="-continue" (click)="disableSecure()">Continue</button>
   </modal>
 
-  <ion-slides #slides (ionSlideWillChange)="onSlideChangeStart($event)" pager>
+  <ion-slides #slides pager>
     <ion-slide>
       <div *ngIf="display" class="table " [ngClass]="{ blurred: !storageAvailable }">
         <div class="cell">
@@ -84,7 +84,6 @@
             </ion-row>
             <ion-row>
               <ion-col col-4>
-                <button (click)="changeStatus()">s</button>
               </ion-col>
               <ion-col col-4>
                 <div (click)="pressNumber(0)">0</div>
@@ -103,14 +102,17 @@
     <ion-slide>
       <div class="">
         <div class="cell-header">
-          <div class="pin-instructions">
+          <div class="pin-instructions" style="margin-top: 20px;">
             <h2>Create a wallet</h2>
             <p>If you don’t yet have a wallet, generate a seed and we’ll create one for you. If you already have a
               wallet, enter
               the seed below and load it.</p>
           </div>
           <div class="cell-body">
-            <ion-toggle checked="false">New</ion-toggle>
+            <div class="-toggle">
+              <button class="new" ion-button round >New</button>
+              <button [disabled]="true" class="load" ion-button round >Load</button>
+            </div>
             <div [formGroup]="form">
               <div class="form-group">
                 <ion-label>Give it a name</ion-label>
@@ -126,7 +128,7 @@
                 <img *ngIf="!form.controls.confirmSeed.errors?.MatchSeed" src="./../../assets/icon/Valid.svg" />
               </div>
               <div class="buttons">
-                <button ion-button round class="-main" [disabled]="!form.valid" (click)="createWallet()">Create</button>
+                <button ion-button round [disabled]="!form.valid" (click)="createWallet()">Create</button>
               </div>
             </div>
           </div>
