--- a/src/pages/disclaimer/disclaimer.html
+++ b/src/pages/disclaimer/disclaimer.html
@@ -1,18 +1,24 @@
 <ion-content>
   <modal [header]="'DISCLAIMER!'" *ngIf="showDisclaimer">
     <p>
-      By continuing, you understand the risks related to the use of cryptographic tokens & blockchain-based software, the Skycoin
-      Mobile wallet, and the Skycoin cryptocurrency. You understand that this product is provided as-is, and agree to the
+      By continuing, you understand the risks related to the use of cryptographic tokens & blockchain-based software,
+      the Skycoin
+      Mobile wallet, and the Skycoin cryptocurrency. You understand that this product is provided as-is, and agree to
+      the
       Terms and Conditions governing the usage of this product.
     </p>
     <div class="-checkbox">
       <div class="-checkbox-container">
-        <ion-checkbox [(ngModel)]="disclaimerAccepted"></ion-checkbox>
-        <ion-label>It’s safe, I swear.</ion-label>
+        <ion-item>
+          <ion-label>Yeah, I understand.</ion-label>
+          <ion-checkbox [(ngModel)]="disclaimerAccepted"></ion-checkbox>
+        </ion-item>
       </div>
     </div>
-    <button [ngClass]="{ disabled: !disclaimerAccepted }" [disabled]="!disclaimerAccepted" ion-button color="light" round class="-continue"
-      (click)="acceptDisclaimer()">Continue</button>
+    <button [ngClass]="{ disabled: !disclaimerAccepted }" [disabled]="!disclaimerAccepted" ion-button color="light"
+            round class="-continue"
+            (click)="acceptDisclaimer()">Continue
+    </button>
   </modal>
 
   <div class="sky-container">
