--- a/src/pages/pincode/pincode.html
+++ b/src/pages/pincode/pincode.html
@@ -1,8 +1,10 @@
 <ion-content id="pincode">
   <modal [header]="'IMPORTANT!'" *ngIf="!storageAvailable">
     <p>
-      We could not instantiate our secure storage service on your device. This means you cannot set a pincode and/or save your
-      wallet seeds on your device. Whenever you want to transfer funds out of your wallet, you will be requested to enter
+      We could not instantiate our secure storage service on your device. This means you cannot set a pincode and/or
+      save your
+      wallet seeds on your device. Whenever you want to transfer funds out of your wallet, you will be requested to
+      enter
       your wallet seed again.
       <b>Without your seed your funds will most likely be irretrievably lost.
       </b>
@@ -20,8 +22,10 @@
         <ion-label>It’s safe, I swear.</ion-label>
       </div>
     </div>
-    <button [ngClass]="{ disabled: !showConfirmCheck }" [disabled]="!showConfirmCheck" ion-button color="light" round class="-continue"
-      (click)="createWallet()">Continue</button>
+    <button [ngClass]="{ disabled: !showConfirmCheck }" [disabled]="!showConfirmCheck" ion-button color="light" round
+            class="-continue"
+            (click)="createWallet()">Continue
+    </button>
   </modal>
 
   <div class="sky-container" [ngClass]="{ blurred: !storageAvailable || showConfirm }">
@@ -32,7 +36,8 @@
             <div class="cell-header">
               <div class="pin-instructions" *ngIf="status === 2">
                 <h2>Set a PIN #</h2>
-                <p>This PIN # will used to open the wallet. Don't forget it; if you do, you may lose access to your mobile wallet.
+                <p>This PIN # will used to open the wallet. Don't forget it; if you do, you may lose access to your
+                  mobile wallet.
                 </p>
               </div>
               <div class="pin-instructions" *ngIf="status === 3">
@@ -64,47 +69,47 @@
             <ion-grid id="numbers">
               <ion-row>
                 <ion-col col-4>
-                  <div (click)="pressNumber(1)">1</div>
+                  <button (click)="pressNumber(1)" ion-button round>1</button>
                 </ion-col>
                 <ion-col col-4>
-                  <div (click)="pressNumber(2)">2</div>
+                  <button (click)="pressNumber(2)" ion-button round>2</button>
                 </ion-col>
                 <ion-col col-4>
-                  <div (click)="pressNumber(3)">3</div>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col col-4>
-                  <div (click)="pressNumber(4)">4</div>
-                </ion-col>
-                <ion-col col-4>
-                  <div (click)="pressNumber(5)">5</div>
-                </ion-col>
-                <ion-col col-4>
-                  <div (click)="pressNumber(6)">6</div>
+                  <button (click)="pressNumber(3)" ion-button round>3</button>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col col-4>
-                  <div (click)="pressNumber(7)">7</div>
+                  <button (click)="pressNumber(4)" ion-button round>4</button>
                 </ion-col>
                 <ion-col col-4>
-                  <div (click)="pressNumber(8)">8</div>
+                  <button (click)="pressNumber(5)" ion-button round>5</button>
                 </ion-col>
                 <ion-col col-4>
-                  <div (click)="pressNumber(9)">9</div>
+                  <button (click)="pressNumber(6)" ion-button round>6</button>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col col-4>
+                  <button (click)="pressNumber(7)" ion-button round>7</button>
+                </ion-col>
+                <ion-col col-4>
+                  <button (click)="pressNumber(8)" ion-button round>8</button>
+                </ion-col>
+                <ion-col col-4>
+                  <button (click)="pressNumber(9)" ion-button round>9</button>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col col-4>
                 </ion-col>
                 <ion-col col-4>
-                  <div (click)="pressNumber(0)">0</div>
+                  <button (click)="pressNumber(0)" ion-button round>0</button>
                 </ion-col>
                 <ion-col col-4>
-                  <div (click)="pressBack()">
+                  <button class="backspace" (click)="pressBack()" ion-button round icon-end>
                     <ion-icon name="backspace"></ion-icon>
-                  </div>
+                  </button>
                 </ion-col>
               </ion-row>
             </ion-grid>
@@ -117,7 +122,8 @@
           <div class="cell-header">
             <div class="pin-instructions" style="margin-top: 20px;">
               <h2>Create a wallet</h2>
-              <p>If you don’t yet have a wallet, generate a seed and we’ll create one for you. If you already have a wallet,
+              <p>If you don’t yet have a wallet, generate a seed and we’ll create one for you. If you already have a
+                wallet,
                 enter the seed below and load it.</p>
             </div>
             <div class="cell-body">
@@ -137,7 +143,7 @@
                 <div class="form-group">
                   <ion-label>Confirm seed</ion-label>
                   <ion-textarea formControlName="confirmSeed" rows="2"></ion-textarea>
-                  <img *ngIf="!form.controls.confirmSeed.errors?.MatchSeed" src="./../../assets/icon/Valid.svg" />
+                  <img *ngIf="!form.controls.confirmSeed.errors?.MatchSeed" src="./../../assets/icon/Valid.svg"/>
                 </div>
                 <div class="buttons">
                   <button ion-button round [disabled]="!form.valid" (click)="confirmCreateWallet()">Create</button>
