Wallet Styles Fix

--- a/src/pages/ob-create-wallet/ob-create-wallet.html
+++ b/src/pages/ob-create-wallet/ob-create-wallet.html
@@ -18,6 +18,14 @@
 </modal>
 
 <ion-content class="sky-container" [ngClass]="{ blurred: showConfirm }">
+  <div class="cell-header">
+    <div class="pin-instructions">
+      <h2>Create a wallet</h2>
+      <p>If you don’t yet have a wallet, generate a seed and we’ll create one for you. If you already have a
+        wallet,
+        enter the seed below and load it.</p>
+    </div>
+  </div>
   <ion-grid>
     <ion-row justify-content-center align-items-center>
       <ion-col>
