--- a/src/pages/wallets/wallets.html
+++ b/src/pages/wallets/wallets.html
@@ -5,7 +5,7 @@
     </div>
     <ion-item-divider>
       <ion-grid>
-        <ion-row>
+        <ion-row class="-header-table">
           <ion-col col-6>
             Wallet
           </ion-col>
@@ -40,7 +40,6 @@
         </button>
       </ion-item-options>
     </ion-item-sliding>
-
     <div class="-actions-buttons">
       <button class="add-wallet" ion-button color="light" (click)="addWallet()">
         <ion-icon name="sky-plus"></ion-icon> &nbsp; Add Wallet
