--- a/src/pages/disclaimer/disclaimer.html
+++ b/src/pages/disclaimer/disclaimer.html
@@ -1,10 +1,8 @@
 <ion-content>
   <modal [header]="'DISCLAIMER!'" *ngIf="showDisclaimer">
     <p>
-      By continuing, you understand the risks related to the use of cryptographic tokens & blockchain-based software,
-      the Skycoin
-      Mobile wallet, and the Skycoin cryptocurrency. You understand that this product is provided as-is, and agree to
-      the
+      By continuing, you understand the risks related to the use of cryptographic tokens & blockchain-based software, the Skycoin
+      Mobile wallet, and the Skycoin cryptocurrency. You understand that this product is provided as-is, and agree to the
       Terms and Conditions governing the usage of this product.
     </p>
     <div class="-checkbox">
@@ -15,9 +13,8 @@
         </ion-item>
       </div>
     </div>
-    <button [ngClass]="{ disabled: !disclaimerAccepted }" [disabled]="!disclaimerAccepted" ion-button color="light"
-            round class="-continue"
-            (click)="acceptDisclaimer()">Continue
+    <button [ngClass]="{ disabled: !disclaimerAccepted }" [disabled]="!disclaimerAccepted" ion-button color="light" round class="-continue"
+      (click)="acceptDisclaimer()">Continue
     </button>
   </modal>
 
