--- a/src/pages/transactions/transactions.html
+++ b/src/pages/transactions/transactions.html
@@ -1,4 +1,4 @@
-<ion-header no-border>
+<ion-header no-border [ngClass]="{ blurred: showConfirm }">
   <ion-navbar>
     <ion-title>Transactions</ion-title>
     <ion-buttons end>
@@ -9,29 +9,24 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content [ngClass]="{ blurred: showConfirm }">
   <div class="-header primary-header-background"></div>
   <ion-list>
     <ion-item *ngFor="let transaction of transactions">
       <ion-row *ngIf="transaction.balance !== 0" (click)="showTransaction(transaction)">
         <ion-col col-2>
-          <ion-icon *ngIf="transaction.balance < 0" ngClass="'-pending': !transaction.confirmed" name="send-trans"></ion-icon>
-          <ion-icon *ngIf="transaction.balance > 0" ngClass="'-pending': !transaction.confirmed" name="receive-trans"></ion-icon>
+          <ion-icon *ngIf="transaction.balance < 0" ngClass="{'-pending': !transaction.confirmed}" name="send-trans"></ion-icon>
+          <ion-icon *ngIf="transaction.balance > 0" ngClass="{'-pending': !transaction.confirmed}" name="receive-trans"></ion-icon>
         </ion-col>
-        <ion-col col-8>
+        <ion-col col-7>
           <ion-row>
             <ion-col>
-
               <span *ngIf="transaction.balance < 0 && transaction.confirmed" class="trans-title">Sent SKY</span>
               <span *ngIf="transaction.balance < 0 && transaction.confirmed" class="trans-subtitle">{{ transaction.timestamp * 1000 | date:'short' }}</span>
-
               <span *ngIf="transaction.balance < 0 && !transaction.confirmed" class="trans-title">Sending SKY</span>
               <span *ngIf="transaction.balance < 0 && !transaction.confirmed" class="trans-subtitle">Pending</span>
-
-
               <span *ngIf="transaction.balance > 0 && !transaction.confirmed" class="trans-title">Received SKY</span>
               <span *ngIf="transaction.balance > 0 && !transaction.confirmed" class="trans-subtitle">{{ transaction.timestamp * 1000 | date:'short' }}</span>
-
               <span *ngIf="transaction.balance > 0 && transaction.confirmed" class="trans-title">Sent SKY</span>
               <span *ngIf="transaction.balance > 0 && transaction.confirmed" class="trans-subtitle pending">Pending</span>
             </ion-col>
@@ -39,11 +34,11 @@
           <ion-row>
             <ion-col>
               <ion-icon name="sky-qr"></ion-icon>
-              <span class="trans-address">{{ transaction.txn.txid | address }}</span>
+              <span class="trans-address">{{ transaction.txid | address }}</span>
             </ion-col>
           </ion-row>
         </ion-col>
-        <ion-col col-2>
+        <ion-col col-3>
           <ion-row>
             <ion-col>
               <span class="trans-title">{{ transaction.balance }} SKY</span>
@@ -53,7 +48,6 @@
             <ion-col>
               <span *ngIf="price" class="trans-address">{{ transaction.balance * price | currency:'USD':true:'1.2-2' }}</span>
             </ion-col>
-
           </ion-row>
         </ion-col>
       </ion-row>
@@ -61,3 +55,52 @@
 
   </ion-list>
 </ion-content>
+
+
+<modal [header]="'Send SKY'" *ngIf="showConfirm" (close)="closeModal($event)">
+
+  <ion-grid>
+    <ion-row>
+      <ion-col class="center-icon">
+        <ion-icon *ngIf="transaction.balance < 0" ngClass="{'-pending': !transaction.confirmed}" name="send-trans"></ion-icon>
+        <ion-icon *ngIf="transaction.balance > 0" ngClass="{'-pending': !transaction.confirmed}" name="receive-trans"></ion-icon>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <h4>{{ transaction.balance }} SKY</h4>
+        <p *ngIf="price">{{ transaction.balance * price | currency:'USD':true:'1.2-2' }}</p>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-list>
+    <ion-item>
+      <span class="-modal-title">Date</span>
+      <span class="-modal-subtitle"> {{ transaction.timestamp * 1000 | date:'short' }}</span>
+    </ion-item>
+
+    <ion-item>
+      <span class="-modal-title"> Status</span>
+      <span class="-modal-subtitle"> {{ transaction.confirmed ? 'Complete' : 'Pending' }}</span>
+      <ion-icon *ngIf="transaction.confirmed" name="checkmark"></ion-icon>
+
+    </ion-item>
+
+    <ion-item>
+      <span class="-modal-title"> From</span>
+      <span class="-modal-subtitle -middle">
+        <span>Personal Wallet</span>
+        <br/>
+        <span class="-address" *ngFor="let input of transaction.inputs">{{ input| address }}</span>
+      </span>
+    </ion-item>
+
+    <ion-item>
+      <span class="-modal-title"> To</span>
+      <span class="-modal-subtitle -middle" *ngFor="let output of transaction.outputs">{{ output.dst| address }}</span>
+    </ion-item>
+  </ion-list>
+
+
+
+</modal>
