Finish refs#62 and refs#63
- refs#62 Fix Actions Buttons
- refs#63 Add Notification Component

--- a/src/pages/wallets/wallets.html
+++ b/src/pages/wallets/wallets.html
@@ -37,12 +37,14 @@
     </ion-item-sliding>
     <div class="-actions-buttons">
       <button class="add-wallet" ion-button color="light" (click)="addWallet()">
-        <ion-icon name="sky-plus"></ion-icon> &nbsp; Add Wallet
+        <ion-icon name="sky-plus"></ion-icon>
+        <span class="-actions-buttons-texts">New Wallet</span>
       </button>
       <button class="load-wallet" ion-button color="light" (click)="loadWallet()">
-        <ion-icon name="sky-load"></ion-icon> &nbsp; Load Wallet
+        <ion-icon name="sky-load"></ion-icon>
+        <span class="-actions-buttons-texts">Load Wallet</span>
       </button>
     </div>
-
+    
   </ion-list>
 </ion-content>
